fixed white space on mobile navigation

--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -3,12 +3,6 @@
     background-position: center;
     display: flex;
     padding-top: 60px;
-
-    /*display: flex;
-    height: 100vh;
-    position: relative; 
-    background-position: center;
-    background-size: cover; */
     height: 90vh;
     overflow: auto;
 
@@ -16,26 +10,17 @@
 
 .Home .Container {
     display: flex;
-    
-    
     position: absolute;
     top: 20%;
     left: 4%;
-    /*display: flex;
-    display: inline-block; */
+  
 }
-
-/*
-.Home .Container h1 {
-    margin: 0;
-} */
 
 .Home .Container .Welcome {
     width: 70%;
     margin-left: 4%;
     text-align: center;
     padding-top: 5%;
-
 }
 
 
@@ -46,15 +31,6 @@
     align-items: center;
     padding-top: 6%;
     display:inline-block;
-    
-    /*
-    height: auto;
-    max-width: 400px;
-    position: absolute;
-    right: 4%;
-    top: 20%;
-    width: 50%; */
-
 }
 
 .Home .HeaderPhotos .Headshot {
