--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -6,22 +6,21 @@
      background: #cf9f8e;
      height: 70px;
      width: 100%;
-     position: fixed;
      z-index: 999;
      opacity: 0.9;
      display: flex; 
      align-items: center; 
-     /*text-align: center;
-     justify-content: center;*/
+     
  }
 
  .NavBar .NavRight .Navigation nav ul {
      list-style: none; 
      margin: 0;
      padding: 0;   
+     /*
      text-align: right;  
      height: 20px;
-     float: right;
+     float: right; */
  }
 
  /* Makes nav bar horizonal */
@@ -46,8 +45,7 @@
  }
 
 
-
- @media (max-width: 884px) {
+ @media (max-width: 990px) {
      .NavBar .NavRight .Navigation {
          display: none;
          
@@ -55,17 +53,13 @@
 
      .NavRight .MobileNavigation {
          display: flex;
-         align-items: center;
-      
-
-         
+         align-items: center;    
      }
 
      .NavRight .MobileNagivation .Hamburger {
         position: absolute;
         right: 5%;
-        cursor: pointer;
-        
+        cursor: pointer;    
     }
 
     .NavBar .NavRight nav ul {
@@ -89,7 +83,7 @@
 
     .NavRight a:hover {
         border-bottom: none;
-        color: purple;
+        color: white;
     }
 
  }
